Progress on proposal

--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -72,8 +72,7 @@ significant challenges, requiring tradeoffs between realism and computational an
 Complex processes are commonly analyzed using a computer model (i.e. \textit{simulation} or \textit{process model}) $f$, where the output is a function of some unknown, unobserved parameter $\theta$.
 For example, to study the terrestrial carbon cycle, ecologists use a process model 
 that predicts the net exchange of carbon between an ecosystem and the atmosphere \cite{Fer}. Running the model requires specifying values for parameters that 
-may not be known, such as the soil respiration rate or seasonal leaf growth \cite{Fer}. A Bayesian statistical formulation is typically employed to estimate (i.e. calibrate) these unknown parameters by comparing simulation outputs to field observations $y$ of the true physical process \cite{Kennedy}. For example, assuming the simple data model $y \sim N(f(\theta), \sigma^2 I)$ and prior $(\theta, \sigma^2) \sim \pi_0$ allows for inference through summaries of the posterior distribution $p(\theta|y) \propto N(y|f(\theta), \sigma^2 I)\pi_0(\theta)$, which typically involves using an iterative inference procedure like Markov Chain Monte Carlo (MCMC). In practice, the runtime of the simulator $f$ may be prohibitively long, precluding the tens of thousands of evaluations typically required by MCMC. A standard approach to address this problem is to fit a Gaussian process 
-emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ to approximate $f$, which is then used in place of $f$ in the inference algorithm \cite{Fer, Kennedy, Cleary}. Computational challenges are compounded when statistical models must account for complex spatiotemporal dynamics of the underlying process, as is common in scientific applications. My research goal is to advance methodology in emulator-based inference for complex spatiotemporal systems, enabling accurate large-scale calibration of computer models.
+may not be known, such as the soil respiration rate or seasonal leaf growth \cite{Fer}. A Bayesian statistical formulation is typically employed to estimate (i.e. calibrate) these unknown parameters by comparing simulation outputs to field observations $y$ of the true physical process \cite{Kennedy}. For example, assuming the simple data model $y \sim N(f(\theta), \sigma^2 I)$ and prior $(\theta, \sigma^2) \sim \pi_0$ allows for inference through summaries of the posterior distribution $p(\theta|y) \propto N(y|f(\theta), \sigma^2 I)\pi_0(\theta)$, which typically involves using an iterative inference procedure like Markov Chain Monte Carlo (MCMC). In practice, the runtime of the simulator $f$ may be prohibitively long, precluding the tens of thousands of evaluations typically required by MCMC. A standard approach to address this problem is to approximate $f$ with a Gaussian process emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ \cite{Fer, Kennedy, Cleary}. Even with this approximation, computational challenges are compounded when statistical models must account for complex spatiotemporal dynamics of the underlying process, as is common in scientific applications. My research goal is to advance methodology in emulator-based inference for complex spatiotemporal systems, enabling accurate large-scale calibration of computer models.
 
  There remains significant work to be done in scaling computer model analysis to such complex settings. Existing large-scale calibration schemes typically sacrifice uncertainty quantification to ease computational demands, which is especially problematic when physical models inform policy decisions. To date, few studies consider the uncertainty introduced by the emulator approximation of the true model $f$. Exceptions include an assortment of ad hoc approaches that use the Gaussian process predictive variance $k(\cdot, \cdot)$ to augment the 
  noise term in the data model, e.g. $\sigma^2 + k(\theta, \theta)$ \cite{Fer, Cleary}. While a step in the right direction, these methods treat emulator uncertainty as independent across different values of $\theta$, ignoring the correlation structure captured in the predictive variance $k(\cdot, \cdot)$. Uncertainty is further neglected when process and statistical parameters are treated as fixed, despite the underlying spatiotemporal nature of the physical system. Modern dynamic hierarchical models provide an ideal framework for quantifying spatial and temporal variation in model parameters \cite{Wikle}, but such models are typically infeasible in computer modeling settings due to their computational demands. Existing examples of assimilating large-scale spatiotemporal datasets with computer models typically utilize thrifty alternatives to full Bayesian inference, ignoring posterior uncertainty \cite{Sun}.
