Progress on NSF proposal

--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -82,18 +82,17 @@ may not be known, such as the soil respiration rate or seasonal leaf growth \cit
 % ...acknowledges that emulation and approximation uncertainty practically have the same effect as data uncertainty, and hence should be reflected in the posterior distribution. 
 
 \noindent
-\textbf{Research Plan.} To address the challenges highlighted above, I will begin by investigating the fundamental issue of emulator uncertainty in the 
-non-dynamic setting. Building upon this foundation, I will work to embed this core methodology in a dynamic spatiotemporal statistical model. These modeling steps will pose increasingly difficult computational challenges, which I will address by developing novel inference methodology and approximation schemes. I will validate these methods on benchmark problems in computer modeling and scientific machine learning \cite{Surjanovic, Takamoto}, as well as terrestrial carbon models actively used in ecological forecasts \cite{Dietze}. This work is collaborative in nature, co-advised by Jonathan Huggins, an expert in scalable Bayesian inference and machine learning, and Michael Dietze, an ecologist with expertise in ecological forecasting and the terrestrial carbon cycle. 
+\textbf{Research Plan.} To address these challenges, I will begin by investigating the fundamental issue of emulator uncertainty in the 
+non-dynamic setting. Building upon this foundation, I will work to embed this core methodology in a dynamic spatiotemporal statistical model. I will validate these methods on benchmark problems in computer modeling and scientific machine learning \cite{Surjanovic, Takamoto}, as well as terrestrial carbon models actively used in ecological forecasts \cite{Dietze}. This work is collaborative in nature, co-advised by Jonathan Huggins, an expert in scalable Bayesian inference and machine learning, and Michael Dietze, an ecologist with expertise in ecological forecasting and the terrestrial carbon cycle. 
  
  \textbf{1. Propagating Emulator Uncertainty.} I will begin by conducting a rigorous study of emulator uncertainty to fill the current gap in the literature, developing novel algorithms for propagating Gaussian process uncertainty and comparing their performance to the baseline independent variance adjustment schemes detailed above. To incorporate the predictive Gaussian process correlation structure, I will leverage the correlation between the current and proposed parameter values in Metropolis-Hastings MCMC algorithms. I will generalize an existing re-sampling method \cite{Fer} to jointly sample over this bivariate distribution, as well as develop analytic approaches that integrate the Gaussian process out of the likelihood to average over emulator uncertainty. 
-I will then generalize these ideas to error models for simulators with time-indexed output $f(\theta) = (f_1(\theta), f_2(\theta), \dots, f_T(\theta))$, a common feature in scientific applications. To accomplish this I will analyze two approaches: (i.) reducing the dimensionality of the output via basis-function 
- approximations, allowing the application of my previous methods to each basis dimension separately, and (ii.) directly emulating the likelihood under an auto-regressive error model instead of the simulator itself, thus reducing back to univariate outputs \cite{Fer}.
+I will then generalize these ideas to error models for simulators with time-indexed output, a common feature in scientific applications. To accomplish this I will analyze two approaches: (i.) reducing the dimensionality of the output via basis-function 
+ approximations, allowing the application of my previous methods to each basis dimension separately, and (ii.) directly emulating the likelihood under an auto-regressive error model instead of the simulator itself, thus reducing back to univariate outputs \cite{Fer}. 
  My analysis will include the derivation of theoretical results obtained by extending existing parameter calibration theory \cite{Tuo}, numerical tests from the 
- \textit{Virtual Library of Simulation Experiments} \cite{Surjanovic}, and validation on the SIPNET terrestrial carbon model \cite{Fer}. This ecological simulation uses a simplified model of the carbon cycle, yielding a faster runtime which affords the opportunity to validate against more computationally intensive approaches. This work will contribute novel theoretical results and off-the-shelf, scalable algorithms for emulator uncertainty propagation in statistical inference, supplanting existing ad hoc approaches with rigorous, validated methodology. 
+ \textit{Virtual Library of Simulation Experiments} \cite{Surjanovic}, and validation on the SIPNET terrestrial carbon model \cite{Fer}. This ecological simulation uses a simplified model of the carbon cycle, yielding a faster runtime which affords the opportunity to validate against more computationally intensive approaches. 
 
  \textbf{2. Spatiotemporal Dynamics.}
- The next phase of my proposal involves embedding computer simulations within a spatiotemporal statistical model, while continuing to build upon the uncertainty quantification methods detailed above. I will adopt a state-space framework, drawing from recent advances in Bayesian filtering 
- \cite{Sarkka} and dynamic spatiotemporal modeling \cite{Wikle, Hefley}. I will model outputs and parameters as spatiotemporal processes, considering models generally of the form $y(s, t) = f(\theta(s, t)) + \epsilon(s, t)$. In particular, I will continue to expand upon my previous basis function approach for outputs $y$, and will initially explore linear Markovian models for $\theta$ and $\epsilon$ \cite{Wikle}.
+ The next phase of my proposal involves embedding computer simulations within a spatiotemporal statistical model, while continuing to build upon the uncertainty quantification methods detailed above. I will adopt a state-space framework, considering dynamical models generally of the form $y(s, t) = f(\theta(s, t)) + \epsilon(s, t)$, where $(s, t)$ indicates space-time dependence \cite{Wikle, Hefley}. I will initially explore linear Markovian models for $\theta$ and $\epsilon$ \cite{Hefley}, while continuing to expand basis function approaches for $y$. 
 These extensions yield high-dimensional hierarchical models that pose problems for existing inference algorithms. To address these issues I will develop novel methodology that extends recent work on inference for high-dimensional partially observed dynamic systems \cite{Park}. Integrating these methods with my Gaussian process emulation and uncertainty quantification framework will face the additional computational bottleneck posed by the poor scalability of Gaussian process prediction. To deal with this I will adopt a well-known parallelizable local Gaussian process approximation \cite{Gramacy}, making adjustments to correctly propagate the additional approximation uncertainty. I will validate these methods using \textit{PDEBench}, which offers a suite of time-varying simulations as benchmarks for scientific machine learning methods \cite{Takamoto}. I will further validate my methodology by scaling the SIPNET carbon model calibration to cover the contiguous United States, and ultimately progress to similar tests of the more computationally-intensive ED2 carbon simulator \cite{Fer, Fer2}.
 
 \section{Stuff to move to broader impacts or intellectual merit}
@@ -101,6 +100,7 @@ These extensions yield high-dimensional hierarchical models that pose problems f
 \item For example, Gaussian process emulation is commonly employed in terrestrial carbon modeling to calibrate sophisticated carbon cycle simulations that can have a runtime of many hours \cite{Fer}.
 \item For example, terrestrial carbon models are typically calibrated independently at different ecological data collection sites \cite{Fer2}.
 \item Large-scale, multi-site parameter calibration has the potential to drastically increase the generalizability of carbon models and improve spatiotemporally-informed decision making. 
+\item This work will contribute novel theoretical results and off-the-shelf, scalable algorithms for emulator uncertainty propagation in statistical inference, supplanting existing ad hoc approaches with rigorous, validated methodology. 
 \end{itemize}
 
 \begin{thebibliography}{20}
