Finished first draft of broader impacts section

--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -99,11 +99,7 @@ These extensions yield high-dimensional hierarchical models that pose problems f
 \textbf{Intellectual Merit.} This research will produce broadly applicable Bayesian methodology for the statistical analysis of computer models using extensive spatiotemporal datasets. It will contribute novel theoretical results and off-the-shelf, scalable algorithms for emulator uncertainty propagation in statistical inference, supplanting existing ad hoc approaches with rigorous, validated methodology. Moreover, it will integrate recent advances in dynamic spatiotemporal modeling with computer modeling methodology, addressing current computational bottlenecks in large-scale simulation-based inference.
 
 \noindent
-\textbf{Broader Impacts.} All methodological developments will be implemented in open-source, well-documented software packages, intended for use across a wide array of scientific disciplines. These packages will be integrated in the \textit{Predictive Ecosystem Analyzer}, an open-source software tool that allows researchers and land managers to work with ecological models and observational data \cite{Fer}. This has the potential to drastically accelerate the pace of ecological model development,  
-
--dissemination: open-source, PEcAn as specific example
--ecological impacts: policy, climate change
--mentorship
+\textbf{Broader Impacts.} All methodological developments will be implemented in open-source, well-documented software packages, intended for use across a wide array of scientific disciplines. These packages will also be integrated in the \textit{Predictive Ecosystem Analyzer}, an open-source software tool that allows researchers and land managers to work with ecological models and observational data \cite{Fer}. This has the potential to drastically accelerate the pace of ecological model development, which plays a pivotal role in the management of national forests and public lands, and projections of climate change impacts. Through my collaboration with Michael Dietze, director of the Ecological Forecasting Initiative, I will also participate in an existing Sloan Foundation supported partnership that serves three minority-serving institutions with large tribal populations (Salish-Kootenai College, Cal Poly Humboldt, U. New Mexico-Gallup). I will support culturally-sensitive training in environmental data science as an online mentor, working with undergraduates in the program and helping them pursue other research opportunities, such as REUs. 
 
 
 \section{Stuff to move to broader impacts or intellectual merit}
