--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -72,9 +72,9 @@ significant challenges, requiring tradeoffs between realism and computational an
 Complex processes are commonly analyzed using a computer model (i.e. \textit{simulation} or \textit{process model}) $f$, where the output is a function of some unknown, unobserved parameter $\theta$.
 For example, to study the terrestrial carbon cycle, ecologists use a process model 
 that predicts the net exchange of carbon between an ecosystem and the atmosphere \cite{Fer}. Running the model requires specifying values for parameters that 
-may not be known, such as the soil respiration rate or seasonal leaf growth \cite{Fer}. A Bayesian statistical formulation is typically employed to estimate (i.e. calibrate) these unknown parameters by comparing simulation outputs to field observations $y$ of the true physical process \cite{Kennedy}. For example, assuming the simple data model $y \sim N(f(\theta), \sigma^2 I)$ and prior $(\theta, \sigma^2) \sim \pi_0$ allows for inference through summaries of the posterior distribution $p(\theta|y) \propto N(y|f(\theta), \sigma^2 I)\pi_0(\theta)$, which typically involves using an iterative inference procedure like Markov Chain Monte Carlo (MCMC). In practice, the runtime of the simulator $f$ may be prohibitively long, precluding the tens of thousands of evaluations typically required by MCMC. A standard approach to address this problem is to approximate $f$ with a Gaussian process emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ \cite{Fer, Kennedy, Cleary}. Even with this approximation, computational challenges are compounded when statistical models must account for complex spatiotemporal dynamics of the underlying process, as is common in scientific applications. My research goal is to advance methodology in emulator-based inference for complex spatiotemporal systems, enabling accurate large-scale calibration of computer models.
+may not be known, such as the soil respiration rate or seasonal leaf growth \cite{Fer}. A Bayesian statistical formulation is typically employed to estimate (i.e. calibrate) these unknown parameters by comparing simulation outputs to field observations $y$ of the true physical process \cite{Kennedy}. For example, assuming the simple data model $y \sim N(f(\theta), \sigma^2 I)$ and prior $(\theta, \sigma^2) \sim \pi_0$ allows for inference through summaries of the posterior distribution $p(\theta|y) \propto N(y|f(\theta), \sigma^2 I)\pi_0(\theta)$, which typically involves using an iterative inference procedure like Markov Chain Monte Carlo (MCMC). In practice, the runtime of the simulator $f$ may be prohibitively long, precluding the tens of thousands of evaluations typically required by MCMC. A standard approach to address this problem is to approximate $f$ with a Gaussian process (GP) emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ \cite{Fer, Kennedy, Cleary}. Even with this approximation, computational challenges are compounded when statistical models must account for complex spatiotemporal dynamics of the underlying process, as is common in scientific applications. My research goal is to advance methodology in emulator-based inference for complex spatiotemporal systems, enabling accurate large-scale calibration of computer models.
 
- There remains significant work to be done in scaling computer model analysis to complex settings. Existing large-scale calibration schemes typically sacrifice uncertainty quantification to ease computational demands, which is especially problematic when the models inform policy decisions. To date, few studies consider the uncertainty introduced by the emulator approximation of the true model $f$. Exceptions include an assortment of ad hoc approaches that use the Gaussian process predictive variance $k(\cdot, \cdot)$ to augment the 
+ There remains significant work to be done in scaling computer model analysis to complex settings. Existing large-scale calibration schemes typically sacrifice uncertainty quantification to ease computational demands, which is especially problematic when the models inform policy decisions. To date, few studies consider the uncertainty introduced by the emulator approximation of the true model $f$. Exceptions include an assortment of ad hoc approaches that use the GP predictive variance $k(\cdot, \cdot)$ to augment the 
  noise term in the data model, e.g. $\sigma^2 + k(\theta, \theta)$ \cite{Fer, Cleary}. While a step in the right direction, these methods treat emulator uncertainty as independent across different values of $\theta$, ignoring the correlation structure captured in the predictive variance $k(\cdot, \cdot)$. Uncertainty is further neglected when process and statistical parameters are treated as fixed, despite the underlying spatiotemporal nature of the physical system. Modern dynamic hierarchical models provide an ideal framework for quantifying spatial and temporal variation in model parameters \cite{Wikle}, but such models are typically infeasible in computer modeling settings due to their computational demands. Existing examples of assimilating large-scale spatiotemporal datasets typically rely on thrifty alternatives to full Bayesian inference, ignoring posterior uncertainty \cite{Sun}.
  
 % Uncertainty quantification is further complicated when spatiotemporal dynamics are included. The existing computer modeling literature has focused on spatially or temporally indexed simulator outputs \cite{Fadikar}, but rarely considers variation in process parameters. 
@@ -83,17 +83,17 @@ may not be known, such as the soil respiration rate or seasonal leaf growth \cit
 
 \noindent
 \textbf{Research Plan.} To address these challenges, I will begin by investigating the fundamental issue of emulator uncertainty in the 
-non-dynamic setting. Building upon this foundation, I will work to embed this core methodology in a dynamic spatiotemporal statistical model. I will validate these methods on benchmark problems in computer modeling and scientific machine learning \cite{Surjanovic, Takamoto}, as well as terrestrial carbon models actively used in ecological forecasts \cite{Dietze}. This work is collaborative in nature, co-advised by Jonathan Huggins, an expert in scalable Bayesian inference and machine learning, and Michael Dietze, an ecologist with expertise in ecological forecasting and the terrestrial carbon cycle. 
+non-dynamic setting. Building upon this foundation, I will work to embed this core methodology in a dynamic spatiotemporal statistical model. I will validate these methods on benchmark problems in scientific machine learning provided by the recent \textit{PDEBench} initiative \cite{Surjanovic, Takamoto}, as well as terrestrial carbon models actively used in ecological forecasts \cite{Dietze}. This work is collaborative in nature, co-advised by Jonathan Huggins, an expert in scalable Bayesian inference and machine learning, and Michael Dietze, an ecologist with expertise in ecological forecasting and the terrestrial carbon cycle. 
 
- \textbf{1. Propagating Emulator Uncertainty.} I will begin by conducting a rigorous study of emulator uncertainty to fill the current gap in the literature, developing novel algorithms for propagating Gaussian process uncertainty and comparing their performance to the baseline independent variance adjustment schemes detailed above. To incorporate the predictive Gaussian process correlation structure, I will leverage the correlation between the current and proposed parameter values in Metropolis-Hastings MCMC algorithms. I will generalize an existing re-sampling method \cite{Fer} to jointly sample over this bivariate distribution, as well as develop analytic approaches that integrate the Gaussian process out of the likelihood to average over emulator uncertainty. 
+ \textbf{1. Propagating Emulator Uncertainty.} I will begin by conducting a rigorous study of emulator uncertainty to fill the current gap in the literature, developing novel algorithms for propagating GP uncertainty and comparing their performance to the baseline independent variance adjustment schemes detailed above. To incorporate the predictive GP correlation structure, I will leverage the correlation between the current and proposed parameter values in Metropolis-Hastings MCMC algorithms. I will generalize an existing re-sampling method \cite{Fer} to jointly sample over this bivariate distribution, as well as develop analytic approaches that integrate the GP out of the likelihood to average over emulator uncertainty. 
 I will then generalize these ideas to error models for simulators with time-indexed output, a common feature in scientific applications. To accomplish this I will analyze two approaches: (i.) reducing the dimensionality of the output via basis-function 
  approximations, allowing the application of my previous methods to each basis dimension separately, and (ii.) directly emulating the likelihood under an auto-regressive error model instead of the simulator itself, thus reducing back to univariate outputs \cite{Fer}. 
- My analysis will include the derivation of theoretical results obtained by extending existing parameter calibration theory \cite{Tuo}, numerical tests from the 
- \textit{Virtual Library of Simulation Experiments} \cite{Surjanovic}, and validation on the SIPNET terrestrial carbon model \cite{Fer}. This ecological simulation uses a simplified model of the carbon cycle, yielding a faster runtime which affords the opportunity to validate against more computationally intensive approaches. 
+ %My analysis will include the derivation of theoretical results obtained by extending existing parameter calibration theory \cite{Tuo}, numerical tests from the 
+ %\textit{Virtual Library of Simulation Experiments} \cite{Surjanovic}, and validation on the SIPNET terrestrial carbon model \cite{Fer}. This ecological simulation uses a simplified model of the carbon cycle, yielding a faster runtime which affords the opportunity to validate against more computationally intensive approaches. 
 
  \textbf{2. Spatiotemporal Dynamics.}
- The next phase of my proposal involves embedding computer simulations within a spatiotemporal statistical model, while continuing to build upon the uncertainty quantification methods detailed above. I will adopt a state-space framework, considering dynamical models generally of the form $y(s, t) = f(\theta(s, t)) + \epsilon(s, t)$, where $(s, t)$ indicates space-time dependence \cite{Wikle, Hefley}. I will initially explore linear Markovian models for $\theta$ and $\epsilon$ \cite{Hefley}, while continuing to expand basis function approaches for $y$. 
-These extensions yield high-dimensional hierarchical models that pose problems for existing inference algorithms. To address these issues I will develop novel methodology that extends recent work on inference for high-dimensional partially observed dynamic systems \cite{Park}. Integrating these methods with my Gaussian process emulation and uncertainty quantification framework will face the additional computational bottleneck posed by the poor scalability of Gaussian process prediction. To deal with this I will adopt a well-known parallelizable local Gaussian process approximation \cite{Gramacy}, making adjustments to correctly propagate the additional approximation uncertainty. I will validate these methods using \textit{PDEBench}, which offers a suite of time-varying simulations as benchmarks for scientific machine learning methods \cite{Takamoto}. I will further validate my methodology by scaling the SIPNET carbon model calibration to cover the contiguous United States, and ultimately progress to similar tests of the more computationally-intensive ED2 carbon simulator \cite{Fer, Fer2}.
+ The next phase of my proposal involves embedding computer simulations within a spatiotemporal statistical model, while continuing to build upon the uncertainty quantification methods detailed above. I will adopt a state-space framework, considering dynamical models generally of the form $y(s, t) = f(\theta(s, t)) + \epsilon(s, t)$, where $(s, t)$ indicates space-time dependence \cite{Wikle, Hefley}. I will initially explore a linear Markovian model for $\theta$, and analyze combinations of spatial basis function approaches with smoothing GP priors to obtain tractable simulation-based spatiotemporal models. 
+These extensions yield high-dimensional hierarchical models that pose problems for existing inference algorithms. To address these issues I will develop novel methodology that extends recent work on inference for high-dimensional partially observed dynamic systems \cite{Park}. Integrating these methods with my GP emulation and uncertainty quantification framework will face the additional computational bottleneck posed by the poor scalability of GP prediction. To deal with this I will adopt a well-known parallelizable local GP approximation \cite{Gramacy}, making adjustments to correctly propagate the additional approximation uncertainty. 
 
 \noindent
 \textbf{Intellectual Merit.} This research will produce broadly applicable Bayesian methodology for the statistical analysis of computer models using extensive spatiotemporal datasets. It will contribute novel theoretical results and off-the-shelf, scalable algorithms for emulator uncertainty propagation in statistical inference, supplanting existing ad hoc approaches with rigorous, validated methodology. Moreover, it will integrate recent advances in dynamic spatiotemporal modeling with computer modeling methodology, addressing current computational bottlenecks in large-scale simulation-based inference.
