Trimming down NSF proposal length

--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -61,23 +61,25 @@ Scalable Emulator-Based Bayesian Methods for Scientific Machine Learning
 \end{center}
 
 The effectiveness of formally combining scientific theory with statistical and machine learning methods is increasingly being recognized \cite{Willcox, Laubmeier, Wikle}. 
-Physical models encapsulate prior scientific knowledge, while a rigorous statistical framework allows for principled inference, prediction, and uncertainty quantification \cite{Wikle}. Computer models have become essential tools at this scientific-statistical interface, tackling problems from 
+ Computer models have become essential tools at this scientific-statistical interface, tackling problems from 
 climate projections \cite{Canadell} to pandemic response \cite{Swallow}. The task of calibrating these models with noisy real-world data continues to present
 significant challenges, requiring tradeoffs between realism and computational and statistical feasibility. Given the ubiquity of computer models in informing
  evidence-based policy, it is essential to develop methods to handle more complex models while simultaneously providing a full accounting of uncertainties.
  My proposed research aims to confront these challenges by developing novel methodological and computational approaches for integrating large-scale datasets with expensive computer simulations. 
  % Recent calls have highlighted the need to bring together state-of-the-art computational methods with modern statistical 
 %  and machine learning models in order to address these problems \cite{Wikle, Baker}.
+% Physical models encapsulate prior scientific knowledge, while a rigorous statistical framework allows for principled inference, prediction, and uncertainty quantification \cite{Wikle}.
 
-Complex processes are commonly analyzed using a computer model (i.e. \textit{simulation} or \textit{process model}) $f$, where the output is a function of some unknown, unobserved parameter $\theta$.
-For example, to study the terrestrial carbon cycle, ecologists use a process model 
-that predicts the net exchange of carbon between an ecosystem and the atmosphere \cite{Fer}. Running the model requires specifying values for parameters that 
-may not be known, such as the soil respiration rate or seasonal leaf growth \cite{Fer}. A Bayesian statistical formulation is typically employed to estimate (i.e. calibrate) these unknown parameters by comparing simulation outputs to field observations $y$ of the true physical process \cite{Kennedy}. For example, assuming the simple data model $y \sim N(f(\theta), \sigma^2 I)$ and prior $(\theta, \sigma^2) \sim \pi_0$ allows for inference through summaries of the posterior distribution $p(\theta|y) \propto N(y|f(\theta), \sigma^2 I)\pi_0(\theta)$, which typically involves using an iterative inference procedure like Markov Chain Monte Carlo (MCMC). In practice, the runtime of the simulator $f$ may be prohibitively long, precluding the tens of thousands of evaluations typically required by MCMC. A standard approach to address this problem is to approximate $f$ with a Gaussian process (GP) emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ \cite{Fer, Kennedy, Cleary}. Even with this approximation, computational challenges are compounded when statistical models must account for complex spatiotemporal dynamics of the underlying process, as is common in scientific applications. My research goal is to advance methodology in emulator-based inference for complex spatiotemporal systems, enabling accurate large-scale calibration of computer models.
+Complex processes are commonly analyzed using a computer model (i.e. simulator) $f$, where the output is a function of some unknown, unobserved parameter $\theta$.
+For example, to study the terrestrial carbon cycle, ecologists use a computer model 
+that predicts the net exchange of carbon between an ecosystem and the atmosphere, which requires specifying values for unknown parameters like the soil respiration rate \cite{Fer}.
+A Bayesian statistical formulation is typically employed to estimate (i.e. calibrate) these unknown parameters by comparing simulation outputs to field observations $y$ of the true physical process \cite{Kennedy}. For example, assuming the simple data model $y \sim N(f(\theta), \sigma^2 I)$ and prior $(\theta, \sigma^2) \sim \pi_0$ allows for inference through summaries of the posterior distribution $p(\theta|y) \propto N(y|f(\theta), \sigma^2 I)\pi_0(\theta)$, which typically involves using an iterative inference procedure like Markov Chain Monte Carlo (MCMC). In practice, the runtime of the simulator $f$ may be prohibitively long, precluding the tens of thousands of evaluations typically required by MCMC. A standard approach to address this problem is to approximate $f$ with a Gaussian process (GP) emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ \cite{Fer, Kennedy, Cleary}. The use of iterative inference algorithms is also limited when high-dimensional statistical models must be employed to account for spatiotemporal dynamics of the underlying process. My research goal is to advance methodology that jointly addresses these two issues, enabling accurate emulator-based inference for complex spatiotemporal systems. 
 
- There remains significant work to be done in scaling computer model analysis to complex settings. Existing large-scale calibration schemes typically sacrifice uncertainty quantification to ease computational demands, which is especially problematic when the models inform policy decisions. To date, few studies consider the uncertainty introduced by the emulator approximation of the true model $f$. Exceptions include an assortment of ad hoc approaches that use the GP predictive variance $k(\cdot, \cdot)$ to augment the 
- noise term in the data model, e.g. $\sigma^2 + k(\theta, \theta)$ \cite{Fer, Cleary}. While a step in the right direction, these methods treat emulator uncertainty as independent across different values of $\theta$, ignoring the correlation structure captured in the predictive variance $k(\cdot, \cdot)$. Uncertainty is further neglected when process and statistical parameters are treated as fixed, despite the underlying spatiotemporal nature of the physical system. Modern dynamic hierarchical models provide an ideal framework for quantifying spatial and temporal variation in model parameters \cite{Wikle}, but such models are typically infeasible in computer modeling settings due to their computational demands. Existing examples of assimilating large-scale spatiotemporal datasets typically rely on thrifty alternatives to full Bayesian inference, ignoring posterior uncertainty \cite{Sun}.
- 
+ There remains significant work to be done in accurately scaling computer model analysis to increasingly complex settings. Existing large-scale calibration schemes typically sacrifice uncertainty quantification to ease computational demands, which is especially problematic when the models inform policy decisions. To date, few studies consider the uncertainty introduced by the emulator approximation of the true model $f$. Exceptions include an assortment of ad hoc approaches that treat emulator uncertainty as independent across different values of $\theta$, ignoring the correlation structure encoded by $k(\cdot, \cdot)$ \cite{Fer, Cleary}.
+Uncertainty is further neglected when process and statistical parameters are treated as fixed, despite the underlying spatiotemporal nature of the physical system. Existing attempts to incorporate large-scale spatiotemporal dynamics typically rely on thrifty alternatives to full Bayesian inference, ignoring posterior uncertainty \cite{Sun}.
+
 % Uncertainty quantification is further complicated when spatiotemporal dynamics are included. The existing computer modeling literature has focused on spatially or temporally indexed simulator outputs \cite{Fadikar}, but rarely considers variation in process parameters. 
+% Modern dynamic hierarchical models provide an ideal framework for quantifying spatial and temporal variation in model parameters \cite{Wikle}, but such models are typically infeasible in computer modeling settings due to their computational demands
 
 % ...acknowledges that emulation and approximation uncertainty practically have the same effect as data uncertainty, and hence should be reflected in the posterior distribution. 
 
@@ -85,7 +87,7 @@ may not be known, such as the soil respiration rate or seasonal leaf growth \cit
 \textbf{Research Plan.} To address these challenges, I will begin by investigating the fundamental issue of emulator uncertainty in the 
 non-dynamic setting. Building upon this foundation, I will work to embed this core methodology in a dynamic spatiotemporal statistical model. I will validate these methods on benchmark problems in scientific machine learning provided by the recent \textit{PDEBench} initiative \cite{Surjanovic, Takamoto}, as well as terrestrial carbon models actively used in ecological forecasts \cite{Dietze}. This work is collaborative in nature, co-advised by Jonathan Huggins, an expert in scalable Bayesian inference and machine learning, and Michael Dietze, an ecologist with expertise in ecological forecasting and the terrestrial carbon cycle. 
 
- \textbf{1. Propagating Emulator Uncertainty.} I will begin by conducting a rigorous study of emulator uncertainty to fill the current gap in the literature, developing novel algorithms for propagating GP uncertainty and comparing their performance to the baseline independent variance adjustment schemes detailed above. To incorporate the predictive GP correlation structure, I will leverage the correlation between the current and proposed parameter values in Metropolis-Hastings MCMC algorithms. I will generalize an existing re-sampling method \cite{Fer} to jointly sample over this bivariate distribution, as well as develop analytic approaches that integrate the GP out of the likelihood to average over emulator uncertainty. 
+ \textbf{1. Emulator Uncertainty.} I will begin by conducting a rigorous study of emulator uncertainty to fill the current gap in the literature, developing novel algorithms for propagating GP uncertainty and comparing their performance to the baseline independent variance adjustment schemes detailed above. To incorporate the predictive GP correlation structure, I will leverage the correlation between the current and proposed parameter values in Metropolis-Hastings MCMC algorithms. I will generalize an existing re-sampling method \cite{Fer} to jointly sample over this bivariate distribution, as well as develop analytic approaches that integrate the GP out of the likelihood to average over emulator uncertainty. 
 I will then generalize these ideas to error models for simulators with time-indexed output, a common feature in scientific applications. To accomplish this I will analyze two approaches: (i.) reducing the dimensionality of the output via basis-function 
  approximations, allowing the application of my previous methods to each basis dimension separately, and (ii.) directly emulating the likelihood under an auto-regressive error model instead of the simulator itself, thus reducing back to univariate outputs \cite{Fer}. 
  %My analysis will include the derivation of theoretical results obtained by extending existing parameter calibration theory \cite{Tuo}, numerical tests from the 
