Trimmed down some more

--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -87,7 +87,9 @@ Uncertainty is further neglected when process and statistical parameters are tre
 \textbf{Research Plan.} To address these challenges, I will begin by investigating the fundamental issue of emulator uncertainty in the 
 non-dynamic setting. Building upon this foundation, I will work to embed this core methodology in a dynamic spatiotemporal statistical model. I will validate these methods on benchmark problems in scientific machine learning provided by the recent \textit{PDEBench} initiative \cite{Surjanovic, Takamoto}, as well as terrestrial carbon models actively used in ecological forecasts \cite{Dietze}. This work is collaborative in nature, co-advised by Jonathan Huggins, an expert in scalable Bayesian inference and machine learning, and Michael Dietze, an ecologist with expertise in ecological forecasting and the terrestrial carbon cycle. 
 
- \textbf{1. Emulator Uncertainty.} I will begin by conducting a rigorous study of emulator uncertainty to fill the current gap in the literature, developing novel algorithms for propagating GP uncertainty and comparing their performance to the baseline independent variance adjustment schemes detailed above. To incorporate the predictive GP correlation structure, I will leverage the correlation between the current and proposed parameter values in Metropolis-Hastings MCMC algorithms. I will generalize an existing re-sampling method \cite{Fer} to jointly sample over this bivariate distribution, as well as develop analytic approaches that integrate the GP out of the likelihood to average over emulator uncertainty. 
+ \textbf{1. Emulator Uncertainty.} I will begin by conducting a rigorous study of emulator uncertainty, extending existing theory [cite] and developing novel algorithms for propagating GP uncertainty. To incorporate the predictive GP correlation structure, I will leverage the correlation between the GP prediction at current and proposed parameter values in Metropolis-Hastings MCMC algorithms. 
+ 
+ I will generalize an existing re-sampling method \cite{Fer} to jointly sample over this bivariate distribution, as well as develop analytic approaches that integrate the GP out of the likelihood to average over emulator uncertainty. 
 I will then generalize these ideas to error models for simulators with time-indexed output, a common feature in scientific applications. To accomplish this I will analyze two approaches: (i.) reducing the dimensionality of the output via basis-function 
  approximations, allowing the application of my previous methods to each basis dimension separately, and (ii.) directly emulating the likelihood under an auto-regressive error model instead of the simulator itself, thus reducing back to univariate outputs \cite{Fer}. 
  %My analysis will include the derivation of theoretical results obtained by extending existing parameter calibration theory \cite{Tuo}, numerical tests from the 
