Shortened NSF proposal further

--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -73,13 +73,12 @@ significant challenges, requiring tradeoffs between realism and computational an
 Complex processes are commonly analyzed using a computer model (i.e. simulator) $f$, where the output is a function of some unknown, unobserved parameter $\theta$.
 For example, to study the terrestrial carbon cycle, ecologists use a computer model 
 that predicts the net exchange of carbon between an ecosystem and the atmosphere, which requires specifying values for unknown parameters like the soil respiration rate \cite{Fer}.
-A Bayesian statistical formulation is typically employed to estimate (i.e. calibrate) these unknown parameters by comparing simulation outputs to field observations $y$ of the true physical process \cite{Kennedy}. For example, assuming the simple data model $y \sim N(f(\theta), \sigma^2 I)$ and prior $(\theta, \sigma^2) \sim \pi_0$ allows for inference through summaries of the posterior distribution $p(\theta|y) \propto N(y|f(\theta), \sigma^2 I)\pi_0(\theta)$, which typically involves using an iterative inference procedure like Markov Chain Monte Carlo (MCMC). In practice, the runtime of the simulator $f$ may be prohibitively long, precluding the tens of thousands of evaluations typically required by MCMC. A standard approach to address this problem is to approximate $f$ with a Gaussian process (GP) emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ \cite{Fer, Kennedy, Cleary}. The use of iterative inference algorithms is also limited when high-dimensional statistical models must be employed to account for spatiotemporal dynamics of the underlying process. My research goal is to advance methodology that jointly addresses these two issues, enabling accurate emulator-based inference for complex spatiotemporal systems. 
-
- There remains significant work to be done in accurately scaling computer model analysis to increasingly complex settings. Existing large-scale calibration schemes typically sacrifice uncertainty quantification to ease computational demands, which is especially problematic when the models inform policy decisions. To date, few studies consider the uncertainty introduced by the emulator approximation of the true model $f$. Exceptions include an assortment of ad hoc approaches that treat emulator uncertainty as independent across different values of $\theta$, ignoring the correlation structure encoded by $k(\cdot, \cdot)$ \cite{Fer, Cleary}.
-Uncertainty is further neglected when process and statistical parameters are treated as fixed, despite the underlying spatiotemporal nature of the physical system. Existing attempts to incorporate large-scale spatiotemporal dynamics typically rely on thrifty alternatives to full Bayesian inference, ignoring posterior uncertainty \cite{Sun}.
+A Bayesian statistical formulation is typically employed to estimate (i.e. calibrate) these unknown parameters by comparing simulation outputs to field observations $y$ of the true physical process \cite{Kennedy}. Performing inference for $\theta$ typically involves running an iterative procedure like Markov Chain Monte Carlo (MCMC) to sample from the posterior $p(\theta|y)$. In physical applications, challenges in inference and uncertainty quantification commonly arise due to (i.) prohibitively long runtime of the simulator $f$, and (ii.) complex spatiotemporal dynamics of the underlying physical process. A standard solution to the former issue is to approximate $f$ with a Gaussian process (GP) emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ \cite{Fer, Kennedy, Cleary}. While this approximation has become standard practice, few studies have considered proper quantification and propagation of the emulator uncertainty \cite{Fer, Cleary}. Moreover, existing attempts to incorporate statistical models of large-scale spatiotemporal dynamics have relied on thrifty alternatives to full Bayesian inference, sacrificing uncertainty quantification to ease computational demands \cite{Sun}.
+My research goal is to advance methodology that jointly addresses these two issues, enabling accurate emulator-based inference for complex spatiotemporal systems. 
 
 % Uncertainty quantification is further complicated when spatiotemporal dynamics are included. The existing computer modeling literature has focused on spatially or temporally indexed simulator outputs \cite{Fadikar}, but rarely considers variation in process parameters. 
 % Modern dynamic hierarchical models provide an ideal framework for quantifying spatial and temporal variation in model parameters \cite{Wikle}, but such models are typically infeasible in computer modeling settings due to their computational demands
+% Exceptions include an assortment of ad hoc approaches that treat emulator uncertainty as independent across different values of $\theta$, ignoring the correlation structure encoded by $k(\cdot, \cdot)$ 
 
 % ...acknowledges that emulation and approximation uncertainty practically have the same effect as data uncertainty, and hence should be reflected in the posterior distribution. 
 
